--- a/src/components/Home/LogoSlider/LogoSlider.css
+++ b/src/components/Home/LogoSlider/LogoSlider.css
@@ -3,9 +3,6 @@
     overflow: hidden;
     position: relative;
     height: 680px;
-    /* border-bottom: 1px solid #908f8f3e; */
-    /* background: #F4F7FC; */
-    /* background: linear-gradient(180deg, #EDF3FF 0%, #FFFFFF 100%); */
     background-color: #ffff;
 }
 
@@ -44,11 +41,9 @@ font-weight: 400;
   .logo-slide img {
     max-width: 70%;
     height: auto;
-    /* background-color: #ffff;
-  box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.163);
-  border-radius: 8px;
-  */
+    filter: grayscale(100%);
   }
+  
   .logo-titile {
     text-align: center;
     font-size: 30px;
@@ -62,3 +57,135 @@ font-size: 45px;
 color:#007bff;
   }
   
+
+  /* Logo Slider */
+.logo-slider {
+  width: 100%; 
+  overflow: hidden;
+  position: relative;
+  height: 680px;
+  background-color: #ffff;
+}
+
+.logo-text-home {
+  position: relative;
+  width: 780px;
+  top: 17%;
+  text-align: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  color: rgba(82, 82, 91, 1);
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 25.5px;
+}
+
+.logo-track {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  position: relative;
+  top: 27%;
+}
+
+.logo-slide {
+  min-width: 25%; 
+  box-sizing: border-box;
+  padding: 10px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo-slide img {
+  max-width: 70%;
+  height: auto;
+  filter: grayscale(100%); 
+
+}
+
+.logo-titile {
+  text-align: center;
+  font-size: 45px;
+  font-weight: 600;
+  position: relative;
+  top: 100px;
+}
+
+.logo-titile span {
+  color: #007bff;
+}
+
+/* Mobile Responsive Styles */
+
+@media (max-width: 1024px) {
+  .logo-slider {
+    height: 500px; 
+  }
+
+  .logo-text-home {
+    width: 90%;
+    top: 15%;
+    font-size: 18px;
+    line-height: 28px;
+    margin: 0 auto;
+  }
+
+  .logo-titile {
+    font-size: 35px;
+    top: 80px;
+  }
+
+  .logo-track {
+    top: 20%;
+  }
+
+
+}
+
+@media (max-width: 768px) {
+
+
+  .logo-text-home {
+      width: 90%; 
+      font-size: 16px; 
+      top: 10%;
+      line-height: 24px;
+  }
+
+  .logo-track {
+      top: 20%;
+  }
+
+  .logo-slide {
+      min-width: 50%; 
+      padding: 5px;
+  }
+
+
+
+  .logo-titile {
+      font-size: 35px; 
+      top: 50px;
+  }
+}
+
+@media (max-width: 480px) {
+  .logo-slider {
+      height: 400px; 
+  }
+
+  .logo-text-home {
+      font-size: 14px; 
+      top: 5%;
+  }
+
+  .logo-track {
+      top: 15%;
+  }
+
+  .logo-titile {
+      font-size: 28px; 
+      top: 30px;
+  }
+}
