--- a/src/components/Footerpage/Patients/Patients.css
+++ b/src/components/Footerpage/Patients/Patients.css
@@ -184,8 +184,10 @@ border-radius: 50%;
     }
 
 .patients-steps {
-    display: flex;
-    justify-content: space-around;
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-start;
+        position: relative;
     margin-top: 30px;
 }
 
@@ -250,25 +252,27 @@ border-radius: 50%;
     height: 35px;
 }
 
-/* .patient-curve {
-    width: 100px; 
-    height: 40px; 
+.patient-curve {
     position: relative;
-  }
-  
-  .patient-curve::before {
+    width: 30%;
+    height: 40px;
+    border-radius:100%/50px/50px;
+
+}
+
+.patient-curve::before {
     content: '';
     position: absolute;
-    left: 50%;
-    top: 0;
-    transform: translateX(-50%);
-    transform: translateY(-50%);
+    top: 50%;
+    left: 0;
+    right: 0;
     width: 100%;
     height: 100%;
-    border-top: 2px dashed #007bff; 
-    border-radius: 50%;
-    z-index: -1;
-  } */
+    border-bottom: 2px dashed #007bff;
+    transform: translateY(50%);
+    border-radius:100%/50px;
+
+}
 
 /* fourth section */
 
@@ -480,17 +484,18 @@ border-radius: 50%;
     /* First Section */
     .patients-first-section {
         justify-content: center;
-        align-items: center;
+        /* align-items: center; */
         gap: 50px;
     }
 
     .Patients-text-content {
-        max-width: 600px;
+        width: 850px;
     }
 
     .patients-first-image {
-        max-height: 500px;
-        max-width: 500px;
+        object-fit: cover;
+        max-height:auto;
+        width:700px;
     }
 
     .first-section-heading {
@@ -507,8 +512,6 @@ border-radius: 50%;
     .patients-first-section-items {
         display: flex;
         flex-direction: row;
-        /* justify-content: center;
-        align-items: center; */
         gap: 40px;
     }
 
@@ -585,7 +588,7 @@ border-radius: 50%;
     }
 
     .third-section-description {
-/* padding:0px 100px 0px 100px; */
+padding:0px 100px 0px 100px;
         font-size: 20px;
         line-height: 28px;
         text-align: center;
@@ -594,12 +597,17 @@ border-radius: 50%;
 
     .patients-steps {
         display: flex;
-        justify-content: center;
+        justify-content: center; 
+        align-items: center;     
         margin-top: 30px;
+        max-width: 1440px;      
+        margin-left: auto;     
+        margin-right: auto;     
     }
+    
 
     .patients-step {
-        width: 20%;
+        /* width: 20%; */
         padding: 30px;
         text-align: center;
     }
