change to display none

--- a/src/components/Footerpage/DoctorPhysician/doctorphysician.css
+++ b/src/components/Footerpage/DoctorPhysician/doctorphysician.css
@@ -1073,8 +1073,9 @@
   }
   
   .physician-timeline-container-sub:before {
-    width: 0px;
-    background-color: none;
+    display:none;
+    /* width: 0px;
+    background-color: none; */
   }
   
   .physician-timeline-item.physician-timeline-left .physician-timeline-content {
