--- a/src/components/Footerpage/DoctorPhysician/doctorphysician.css
+++ b/src/components/Footerpage/DoctorPhysician/doctorphysician.css
@@ -1060,49 +1060,80 @@
   }
   
   /*==============challenges-container=========End=======*/
-  .physician-timeline-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-    margin-top: 100px;
-    position: none;
-    height: 0%;
-}
+    .physician-timeline-container {
+      padding: 50px 20px 0 20px;
+    }
+  
+    .physician-timeline-container h1 {
+      font-size: 28px;
+      line-height: 36px;
+    }
+  
+    .physician-timeline-container-sub {
+      margin: 100px auto 0 auto;
+    }
+  
+    .physician-timeline-item {
+      flex-direction: column;
+      gap: 20px;
+      margin-top: 50px;
+    }
+  
+    .physician-timeline-item.physician-timeline-left .physician-timeline-content,
+    .physician-timeline-item.physician-timeline-right .physician-timeline-content {
+      width: 100%;
+      height: auto;
+      text-align: center;
+      order: 2;
+    }
+  
+    .physician-timeline-image {
+      width: 100%;
+      height: auto;
+      order: 1;
+    }
+  
+    .physician-timeline-number {
+      top: -40px;
+      width: 50px;
+      height: 50px;
+      font-size: 24px;
+      line-height: 30px;
+    }
+  
+    .physician-timeline-content h2 {
+      font-size: 20px;
+      line-height: 25px;
+    }
+  
+    .physician-timeline-points {
+      gap: 20px;
+      margin-top: 15px;
+    }
+  
+    .physician-timeline-point p {
+      font-size: 12px;
+      line-height: 14px;
+    }
+  
+    .physician-timeline-point .physician-timeline-point-title-icon h4 {
+      font-size: 14px;
+      line-height: 16px;
+    }
 
-.physician-timeline-container-sub:before {
-    display: none;
-}
+    .physician-timeline-item:before {
+      display: none;
+        }
+        
+        /* === Numbers in the timeline === */
+        .physician-timeline-number {
+          display: none;
+        }
+        .physician-timeline-container-sub:before {
+          display: none;
+        }
+  
 
-.physician-timeline-item:before {
-display: none;
-}
-
-/* === Numbers in the timeline === */
-.physician-timeline-number {
-  display: none;
-}
-
-.physician-timeline-item.physician-timeline-left .physician-timeline-content,
-.physician-timeline-item.physician-timeline-right .physician-timeline-content {
-    text-align: left;
-    width: 450px;
-    height: auto;
-}
-
-.physician-timeline-item.physician-timeline-left .physician-timeline-image,
-.physician-timeline-item.physician-timeline-right .physician-timeline-image {
-    margin-bottom: 30px;
-}
-
-.physician-timeline-number {
-    top: -70px;
-}
-
-.physician-timeline-item:before {
-    top: -34px;
-}
   
   /*==============timeline-container=========End=======*/
 
@@ -1137,24 +1168,7 @@ display: none;
   }
   /*==============healthcare-platform===========End=====*/
   /*==============timeline-container=========Start=======*/
-  .physician-timeline-item.physician-timeline-left .physician-timeline-content,
-  .physician-timeline-item.physician-timeline-right .physician-timeline-content {
-      text-align: left;
-      width: 400px;
-      height: auto;
-      padding: 0 20px;
-  }
 
-  .physician-timeline-image {
-      width: 350px;
-      height: auto;
-      padding: 0 20px;
-  }
-
-  .physician-timeline-item.physician-timeline-left .physician-timeline-image,
-  .physician-timeline-item.physician-timeline-right .physician-timeline-image {
-      margin-bottom: 0px;
-  }
 }  
 
 @media screen and (max-width: 480px) {
@@ -1187,7 +1201,7 @@ display: none;
     padding: 0 20px;
   }
 
-  .physician-timeline-item.physician-timeline-left .physician-timeline-content,
+  /* .physician-timeline-item.physician-timeline-left .physician-timeline-content,
     .physician-timeline-item.physician-timeline-right .physician-timeline-content {
         text-align: left;
         width: 300px;
@@ -1199,7 +1213,7 @@ display: none;
         width: 300px;
         height: auto;
         padding: 0 20px;
-    }
+    } */
 
   /* .physician-timeline-item.physician-timeline-left .physician-timeline-content {
     text-align: left;
@@ -1217,12 +1231,12 @@ display: none;
     padding: 0 20px;
   } */
 
-  .physician-timeline-image {
+  /* .physician-timeline-image {
     width: 300px;
     height: auto;
     height: fit-content;
     padding: 0 20px;
-  }
+  } */
 
 
   .image-section {
@@ -1237,8 +1251,60 @@ display: none;
   }
 }
 
+@media (max-width: 480px) {
+  .physician-timeline-container {
+    padding: 30px 15px 0 15px;
+  }
 
+  .physician-timeline-container h1 {
+    font-size: 24px;
+    line-height: 32px;
+  }
 
+  .physician-timeline-container-sub {
+    margin: 60px auto 0 auto;
+  }
 
+  .physician-timeline-item {
+    gap: 15px;
+    margin-top: 40px;
+  }
 
+  .physician-timeline-image {
+    width: 100%;
+    height: auto;
+  }
 
+  .physician-timeline-number {
+    top: -30px;
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .physician-timeline-content h2 {
+    font-size: 18px;
+    line-height: 22px;
+  }
+
+  .physician-timeline-points {
+    gap: 15px;
+    margin-top: 10px;
+  }
+
+  .physician-timeline-point p {
+    font-size: 11px;
+    line-height: 13px;
+  }
+
+  .physician-timeline-point .physician-timeline-point-title-icon h4 {
+    font-size: 12px;
+    line-height: 14px;
+  }
+
+  .physician-timeline-point .physician-timeline-point-title-icon img {
+    width: 20px;
+    height: 20px;
+  }
+}
