--- a/src/components/Footerpage/DoctorPhysician/doctorphysician.css
+++ b/src/components/Footerpage/DoctorPhysician/doctorphysician.css
@@ -923,52 +923,77 @@
   }
 
   /*==============timeline-container=========Start=======*/
-  .physician-timeline-points {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    margin-top: 10px;
+  .physician-timeline-container {
+    padding: 50px 20px 0 20px;
   }
   
-  .physician-timeline-number {
-    top: -50px;
-    font-size: 27px;
-    width: 50px;
-    height: 50px;
-    padding: 5px 14px 13px 8px;
+  .physician-timeline-container h1 {
+    font-size: 28px;
+    line-height: 36px;
   }
   
-  .physician-timeline-item:before {
-    top: -12px;
-    height: 18px;
-    width: 18px;
+  .physician-timeline-container-sub {
+    margin: 100px auto 0 auto;
   }
   
   .physician-timeline-item {
-    gap: 20%;
-    margin-bottom: 50px;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 50px;
   }
   
-  .physician-timeline-content {
-    width: 400px;
-    height: 380px;
+  .physician-timeline-item.physician-timeline-left .physician-timeline-content,
+  .physician-timeline-item.physician-timeline-right .physician-timeline-content {
+    width: 100%;
+    height: auto;
+    text-align: center;
+    order: 2;
+  }
+  
+  .physician-timeline-image {
+    width: 100%;
+    height: auto;
+    order: 1;
+  }
+  
+  .physician-timeline-number {
+    top: -40px;
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    line-height: 30px;
   }
   
   .physician-timeline-content h2 {
     font-size: 20px;
+    line-height: 25px;
   }
   
-  .physician-timeline-point .physician-timeline-point-title-icon img {
-    width: 20px;
-    height: 20px;
+  .physician-timeline-points {
+    gap: 20px;
+    margin-top: 15px;
+  }
+  
+  .physician-timeline-point p {
+    font-size: 12px;
+    line-height: 14px;
   }
   
   .physician-timeline-point .physician-timeline-point-title-icon h4 {
     font-size: 14px;
+    line-height: 16px;
   }
   
-  .physician-timeline-point p {
-    font-size: 10px;
+  .physician-timeline-item:before {
+    display: none;
+  }
+  
+  .physician-timeline-number {
+    display: none;
+  }
+  
+  .physician-timeline-container-sub:before {
+    display: none;
   }
   
    /*==============timeline-container=========End=======*/
@@ -1125,7 +1150,6 @@
       display: none;
         }
         
-        /* === Numbers in the timeline === */
         .physician-timeline-number {
           display: none;
         }
